--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,14 +1,14 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
+GameInstanceClass=/Game/Blueprints/Game/BP_GameInstance.BP_GameInstance_C
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 ServerDefaultMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
-GlobalDefaultGameMode=/Script/Sokoban.SokobanGameMode
+GlobalDefaultGameMode=/Game/Blueprints/Game/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -26,5 +26,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
