--- a/Sokoban.uproject
+++ b/Sokoban.uproject
@@ -7,7 +7,12 @@
 		{
 			"Name": "Sokoban",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"UMG",
+				"Engine",
+				"Paper2D"
+			]
 		}
 	],
 	"Plugins": [
