--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,12 +1,12 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/GameMap.GameMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Blueprints/Game/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/GameMap.GameMap
 ServerDefaultMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
 GlobalDefaultGameMode=/Game/Blueprints/Game/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
