--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=97290E94477050E8927DB0B1A4F356A9
 ProjectName=2D Side Scroller Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+
